--- a/Real_World_Data_Science_Interview_Questions_!.ipynb
+++ b/Real_World_Data_Science_Interview_Questions_!.ipynb
@@ -33,7 +33,7 @@
         "\n",
         "###**Pb 1 : Finding Updated Records [Link](https://platform.stratascratch.com/coding/10299-finding-updated-records?code_type=2&via=keith)**\n",
         "\n",
-        "###**Pb 2 : Outliers Detection [Link](https://platform.stratascratch.com/technical/2372-outliers-detection?via=keith)**\n",
+        "###**Pb 2 : Number Of Bathrooms And Bedrooms [Link](https://platform.stratascratch.com/coding/9622-number-of-bathrooms-and-bedrooms?code_type=2&via=keith)**\n",
         "\n",
         "###**Pb 3 : Counting Instances in Text [Link](https://platform.stratascratch.com/coding/9814-counting-instances-in-text?code_type=2&via=keith)**\n",
         "\n",
